feat(vscode): use tailwindcss extension for all .css files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
+  // Use the tailwindcss language service for css files
+  "files.associations": {
+    "*.css": "tailwindcss"
+  }
 }
