--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.9",
     "lucide-react": "^0.261.0",
     "next": "13.4.10",
     "react": "18.2.0",
