--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "ripple-address-codec": "^4.3.0",
+    "sonner": "^0.6.2",
     "tailwind-merge": "^1.14.0",
     "xrpl": "^2.9.1",
     "zod": "^3.21.4"
