--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "big.js": "^6.2.1",
     "bip39": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.4",
+    "@types/big.js": "^6.1.6",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
