--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@next/bundle-analyzer": "^13.4.12",
+    "@notionhq/client": "^2.2.9",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -22,8 +23,8 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
-    "lucide-react": "^0.261.0",
-    "next": "13.4.10",
+    "lucide-react": "^0.263.1",
+    "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
@@ -37,25 +38,27 @@
     "@tailwindcss/forms": "^0.5.4",
     "@types/big.js": "^6.1.6",
     "@types/crypto-js": "^4.1.1",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "assert": "^2.0.0",
     "autoprefixer": "10.4.14",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "eslint-plugin-perfectionist": "^1.5.0",
+    "eslint-config-next": "13.4.12",
+    "eslint-plugin-perfectionist": "^1.5.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "postcss": "8.4.26",
+    "postcss": "8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "url": "^0.11.1"
   }
